--- a/DialogWindows/DialogEditDepartment.xaml
+++ b/DialogWindows/DialogEditDepartment.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="OrganizationGUI_2.DialogNewDepartment"
+﻿<Window x:Class="OrganizationGUI_2.DialogWindows.DialogEditDepartment"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -15,7 +15,7 @@
 			<Setter Property="TextBlock.FontWeight" Value="Normal" />
 		</Style>
 	</Window.Resources>
-	
+
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
@@ -23,7 +23,7 @@
 			<RowDefinition />
 		</Grid.RowDefinitions>
 
-		<TextBlock Text="Введите название нового департамента:" Style="{StaticResource PlainText}" Margin="5,5,5,5"/>
+		<TextBlock Text="Введите новое название департамента:" Style="{StaticResource PlainText}" Margin="5,5,5,5"/>
 		<TextBox Grid.Row="1" x:Name="tboxDepName" Margin="5,0,5,5"/>
 
 		<StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="5,0,5,5">
