--- a/DialogWindows/DialogTransferDepartment.xaml
+++ b/DialogWindows/DialogTransferDepartment.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="OrganizationGUI_2.DialogNewDepartment"
+﻿<Window x:Class="OrganizationGUI_2.DialogWindows.DialogTransferDepartment"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:OrganizationGUI_2"
+        xmlns:local="clr-namespace:OrganizationGUI_2.DialogWindows"
         mc:Ignorable="d"
-        Title="Создание нового департамента"
-		  ResizeMode="CanMinimize" Width="350" Height="130">
+        Title="Перемещение департамента"
+		  ResizeMode="CanMinimize" MaxWidth="480" Height="130">
 
 	<Window.Resources>
 		<Style x:Key="PlainText">
@@ -15,7 +15,7 @@
 			<Setter Property="TextBlock.FontWeight" Value="Normal" />
 		</Style>
 	</Window.Resources>
-	
+
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
@@ -23,8 +23,14 @@
 			<RowDefinition />
 		</Grid.RowDefinitions>
 
-		<TextBlock Text="Введите название нового департамента:" Style="{StaticResource PlainText}" Margin="5,5,5,5"/>
-		<TextBox Grid.Row="1" x:Name="tboxDepName" Margin="5,0,5,5"/>
+		<StackPanel Orientation="Horizontal">
+			<TextBlock Text="Выберите куда переместить департамент " Style="{StaticResource PlainText}" Margin="5,5,5,5"/>
+			<TextBlock x:Name="tblockDepIn" Style="{StaticResource PlainText}" Margin="5,5,5,5"/>
+		</StackPanel>
+		
+		<ComboBox Grid.Row="1" x:Name="cboxDepNames" Margin="5,0,5,5" >
+			
+		</ComboBox>
 
 		<StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="5,0,5,5">
 			<Button Content="Принять" Margin="0,0,5,0" IsDefault="True" Click="Accept_Click"/>
