--- a/DialogWindows/DialogTransferDepartment.xaml
+++ b/DialogWindows/DialogTransferDepartment.xaml
@@ -33,7 +33,7 @@
 		</ComboBox>
 
 		<StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="5,0,5,5">
-			<Button Content="Принять" Margin="0,0,5,0" IsDefault="True" Click="Accept_Click"/>
+			<Button Content="Переместить" Margin="0,0,5,0" IsDefault="True" Click="Accept_Click"/>
 			<Button Content="Выйти" IsCancel="True" />
 		</StackPanel>
 
