--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,6 @@
 	xmlns:local="clr-namespace:OrganizationGUI_2"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	Title="ОБРПРБД 'Обычная организация'"
-	
 	MinWidth="900"
 	MinHeight="500"
 	MouseLeftButtonDown="MainWindow_MouseLeftButtonDown"
@@ -30,56 +29,106 @@
 		<ControlTemplate x:Key="DatePickerTextBoxTemplate1" TargetType="{x:Type DatePickerTextBox}">
 			<Grid>
 				<Grid.Resources>
-					<SolidColorBrush x:Key="WatermarkBrush" Color="#FFAAAAAA"/>
+					<SolidColorBrush x:Key="WatermarkBrush" Color="#FFAAAAAA" />
 				</Grid.Resources>
+				<Border
+					x:Name="Border"
+					Padding="{TemplateBinding Padding}"
+					Background="{TemplateBinding Background}"
+					BorderBrush="{TemplateBinding BorderBrush}"
+					BorderThickness="{TemplateBinding BorderThickness}"
+					CornerRadius="1"
+					Opacity="1">
+					<Grid
+						x:Name="WatermarkContent"
+						HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+						VerticalAlignment="{TemplateBinding VerticalContentAlignment}">
+						<Border
+							x:Name="ContentElement"
+							BorderBrush="#FFFFFFFF"
+							BorderThickness="1" />
+						<Border
+							x:Name="watermark_decorator"
+							BorderBrush="#FFFFFFFF"
+							BorderThickness="1">
+							<ContentControl
+								x:Name="PART_Watermark"
+								Padding="2"
+								Focusable="False"
+								IsHitTestVisible="False"
+								Opacity="0" />
+						</Border>
+						<ScrollViewer
+							x:Name="PART_ContentHost"
+							Margin="0"
+							HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+							VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" />
+						<Border
+							x:Name="FocusVisual"
+							BorderBrush="#FF45D6FA"
+							CornerRadius="1"
+							IsHitTestVisible="False"
+							Opacity="0" />
+					</Grid>
+				</Border>
 				<VisualStateManager.VisualStateGroups>
 					<VisualStateGroup x:Name="CommonStates">
 						<VisualStateGroup.Transitions>
-							<VisualTransition GeneratedDuration="0"/>
-							<VisualTransition GeneratedDuration="0:0:0.1" To="MouseOver"/>
+							<VisualTransition GeneratedDuration="0" />
+							<VisualTransition GeneratedDuration="0:0:0.1" To="MouseOver" />
 						</VisualStateGroup.Transitions>
-						<VisualState x:Name="Normal"/>
+						<VisualState x:Name="Normal" />
 						<VisualState x:Name="MouseOver">
 							<Storyboard>
-								<ColorAnimation Duration="0" Storyboard.TargetName="ContentElement" Storyboard.TargetProperty="(Border.BorderBrush).(SolidColorBrush.Color)" To="#FF99C1E2"/>
-								<ColorAnimation Duration="0" Storyboard.TargetName="watermark_decorator" Storyboard.TargetProperty="(Border.BorderBrush).(SolidColorBrush.Color)" To="#FF99C1E2"/>
+								<ColorAnimation
+									Storyboard.TargetName="ContentElement"
+									Storyboard.TargetProperty="(Border.BorderBrush).(SolidColorBrush.Color)"
+									To="#FF99C1E2"
+									Duration="0" />
+								<ColorAnimation
+									Storyboard.TargetName="watermark_decorator"
+									Storyboard.TargetProperty="(Border.BorderBrush).(SolidColorBrush.Color)"
+									To="#FF99C1E2"
+									Duration="0" />
 							</Storyboard>
 						</VisualState>
 					</VisualStateGroup>
 					<VisualStateGroup x:Name="WatermarkStates">
 						<VisualStateGroup.Transitions>
-							<VisualTransition GeneratedDuration="0"/>
+							<VisualTransition GeneratedDuration="0" />
 						</VisualStateGroup.Transitions>
-						<VisualState x:Name="Unwatermarked"/>
+						<VisualState x:Name="Unwatermarked" />
 						<VisualState x:Name="Watermarked">
 							<Storyboard>
-								<DoubleAnimation Duration="0" Storyboard.TargetName="ContentElement" Storyboard.TargetProperty="Opacity" To="0"/>
-								<DoubleAnimation Duration="0" Storyboard.TargetName="PART_Watermark" Storyboard.TargetProperty="Opacity" To="0"/>
+								<DoubleAnimation
+									Storyboard.TargetName="ContentElement"
+									Storyboard.TargetProperty="Opacity"
+									To="0"
+									Duration="0" />
+								<DoubleAnimation
+									Storyboard.TargetName="PART_Watermark"
+									Storyboard.TargetProperty="Opacity"
+									To="0"
+									Duration="0" />
 							</Storyboard>
 						</VisualState>
 					</VisualStateGroup>
 					<VisualStateGroup x:Name="FocusStates">
 						<VisualStateGroup.Transitions>
-							<VisualTransition GeneratedDuration="0"/>
+							<VisualTransition GeneratedDuration="0" />
 						</VisualStateGroup.Transitions>
-						<VisualState x:Name="Unfocused"/>
+						<VisualState x:Name="Unfocused" />
 						<VisualState x:Name="Focused">
 							<Storyboard>
-								<DoubleAnimation Duration="0" Storyboard.TargetName="FocusVisual" Storyboard.TargetProperty="Opacity" To="1"/>
+								<DoubleAnimation
+									Storyboard.TargetName="FocusVisual"
+									Storyboard.TargetProperty="Opacity"
+									To="1"
+									Duration="0" />
 							</Storyboard>
 						</VisualState>
 					</VisualStateGroup>
 				</VisualStateManager.VisualStateGroups>
-				<Border x:Name="Border" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="1" Opacity="1" Padding="{TemplateBinding Padding}">
-					<Grid x:Name="WatermarkContent" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}">
-						<Border x:Name="ContentElement" BorderThickness="1" BorderBrush="#FFFFFFFF"/>
-						<Border x:Name="watermark_decorator" BorderThickness="1" BorderBrush="#FFFFFFFF">
-							<ContentControl x:Name="PART_Watermark" Focusable="False" IsHitTestVisible="False" Opacity="0" Padding="2"/>
-						</Border>
-						<ScrollViewer x:Name="PART_ContentHost" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="0" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
-						<Border x:Name="FocusVisual" BorderBrush="#FF45D6FA" CornerRadius="1" IsHitTestVisible="False" Opacity="0"/>
-					</Grid>
-				</Border>
 			</Grid>
 		</ControlTemplate>
 	</Window.Resources>
@@ -137,18 +186,18 @@
 						FontSize="18"
 						FontWeight="Medium"
 						Style="{StaticResource PlainText}"
-						Text="{Binding StringFormat={} {0}, Path=Dir.LastName}" />
+						Text="{Binding StringFormat={}{0}, Path=Dir.LastName}" />
 					<TextBlock
 						FontSize="18"
 						Style="{StaticResource PlainText}"
-						Text="{Binding StringFormat=\, зарплата: {0} р.\, дата рождения: , Path=DirSalary}" />
+						Text="{Binding StringFormat=\, зарплата: {0} р.\, дата рождения:, Path=DirSalary}" />
 					<DatePickerTextBox
-						Template="{DynamicResource DatePickerTextBoxTemplate1}"
 						FontSize="18"
 						Style="{StaticResource PlainText}"
+						Template="{DynamicResource DatePickerTextBoxTemplate1}"
 						Text="{Binding StringFormat='dd.MM.yyyy', Path=Dir.BirthDate}" />
 				</StackPanel>
-				
+
 				<StackPanel Orientation="Horizontal">
 					<TextBlock Text="Заместитель начальника: " />
 					<TextBox
@@ -162,15 +211,15 @@
 						FontSize="18"
 						FontWeight="Medium"
 						Style="{StaticResource PlainText}"
-						Text="{Binding StringFormat={} {0}, Path=AssociateDir.LastName}" />
+						Text="{Binding StringFormat={}{0}, Path=AssociateDir.LastName}" />
 					<TextBlock
 						FontSize="18"
 						Style="{StaticResource PlainText}"
-						Text="{Binding StringFormat=\, зарплата: {0} р.\, дата рождения: , Path=AssociateDirSalary}" />
+						Text="{Binding StringFormat=\, зарплата: {0} р.\, дата рождения:, Path=AssociateDirSalary}" />
 					<DatePickerTextBox
-						Template="{DynamicResource DatePickerTextBoxTemplate1}"
 						FontSize="18"
 						Style="{StaticResource PlainText}"
+						Template="{DynamicResource DatePickerTextBoxTemplate1}"
 						Text="{Binding StringFormat='dd.MM.yyyy', Path=AssociateDir.BirthDate}" />
 
 				</StackPanel>
@@ -234,12 +283,13 @@
 						BorderThickness="0"
 						FontWeight="Medium"
 						Style="{StaticResource PlainText}"
-						Text="{Binding StringFormat={} {0}, ElementName=organizationTree, Path=SelectedItem.LocalBoss.LastName}" />
+						Text="{Binding StringFormat={}{0}, ElementName=organizationTree, Path=SelectedItem.LocalBoss.LastName}" />
 
 					<TextBlock Style="{StaticResource PlainText}" Text="{Binding StringFormat=\, зарплата: {0} р.\, дата рождения:, ElementName=organizationTree, Path=SelectedItem.LocalBossSalary}" />
-					
-					<DatePickerTextBox Template="{DynamicResource DatePickerTextBoxTemplate1}"
+
+					<DatePickerTextBox
 						Style="{StaticResource PlainText}"
+						Template="{DynamicResource DatePickerTextBoxTemplate1}"
 						Text="{Binding ElementName=organizationTree, StringFormat='dd.MM.yyyy', Path=SelectedItem.LocalBoss.BirthDate}" />
 
 				</StackPanel>
@@ -355,7 +405,7 @@
 							<MenuItem Click="MenuItemWorkList_Click" Header="Добавить" />
 							<MenuItem Click="MenuItemWorkList_Click" Header="Переместить" />
 							<MenuItem Click="MenuItemWorkList_Click" Header="Редактировать" />
-							<MenuItem Click="MenuItemWorkList_Click" Header="Удалить интерна" />
+							<MenuItem Click="MenuItemWorkList_Click" Header="Удалить" />
 						</ContextMenu>
 					</ListView.ContextMenu>
 				</ListView>
